# lonewolf

./: CMakeLists.txt  COPYING  README.md  clickable.json  get-bundled-deps  lonewolf.apparmor  manifest.json.in
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
app/: BookList.qml  BookPage.qml  BookPage.qml.~1~  CMakeLists.txt  ChartCheck.qml  ChartItem.qml  ChartPage.qml  ChartPage.qml.~1~  Combat.qml  DonatePage.qml  GameState.qml  Main.qml  Main.qml.~1~  MenuPage.qml  Puzzle.qml  html.xsl  lonewolf.desktop.in  main.css
app/tests/autopilot/: run
app/tests/autopilot/lonewolf/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt  backend.cpp  backend.h  book.h  downloader.cpp  downloader.h  qmldir  util.h
backend/modules/Lonewolf/: backend.cpp  backend.h  book.cpp  book.cpp.~1~  book.h  book.h.~1~  downloader.cpp  downloader.h  mytype.cpp  mytype.h  util.cpp  util.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: lonewolf.mterry.pot  lonewolf.timsueberkrueb.pot
snap/: snapcraft.yaml
snap/gui/: lonewolf.desktop
